manifests/minio/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        ports:
        - containerPort: 9000
        - containerPort: 9001
        args:
        - server
        - --console-address
        - ":9001"
        - /data
        volumeMounts:
        - name: minio-storage
          mountPath: /data
      volumes:
      - name: minio-storage
        persistentVolumeClaim:
          claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio-api
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: api
      port: 9000
      targetPort: 9000
      nodePort: 30031
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: minio-console
spec:
  type: ClusterIP
  selector:
    app: minio
  ports:
    - protocol: TCP
      name: console
      port: 9001
      targetPort: 9001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-http
spec:
  ingressClassName: nginx
  rules:
    - host: minio
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio-service
                port:
                  number: 9001
